--- a/src/html/stories.html
+++ b/src/html/stories.html
@@ -1,126 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Photosnap Website Challenge</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  Stories
-  Features
-  Pricing
+    <title>Frontend Mentor | Photosnap Website Challenge</title>
+  </head>
+  <body>
+    Stories Features Pricing Get an invite Last month's featured story Hazy full
+    moon of Appalachia March 2nd 2020 by John Appleseed The dissected plateau
+    area, while not actually made up of geological mountains, is popularly
+    called "mountains," especially in eastern Kentucky and West Virginia, and
+    while the ridges are not high, the terrain is extremely rugged. Read the
+    story
 
-  Get an invite
-
-  Last month's featured story
-
-  Hazy full moon of Appalachia
-  March 2nd 2020
-  by John Appleseed
-
-  The dissected plateau area, while not actually made up of geological mountains, 
-  is popularly called "mountains," especially in eastern Kentucky and West Virginia, 
-  and while the ridges are not high, the terrain is extremely rugged.
-
-  Read the story
-
-  April 16th 2020
+    <!-- April 16th 2020
   The Mountains
   by John Appleseed
-  Read Story
+  Read Story -->
 
-  April 14th 2020
+    <!-- April 14th 2020
   Sunset Cityscapes
-  by Benjamin Cruz
-  Read Story
+  by Benjamin Cruzz
+  Read Story -->
 
-  April 11th 2020
+    <!-- April 11th 2020
   18 Days Voyage
   by Alexei Borodin
-  Read Story
+  Read Story -->
 
-  April 9th 2020
+    <!-- April 9th 2020
   Architecturals
   by Samantha Brooke
-  Read Story
+  Read Story -->
 
-  April 7th 2020
+    <!-- April 7th 2020
   World Tour 2019
   by Timothy Wagner
-  Read Story
+  Read Story -->
 
-  April 7th 2020
-  World Tour 2019
-  by Timothy Wagner
-  Read Story
-
-  April 3rd 2020
+    <!-- April 3rd 2020
   Unforeseen Corners
   by William Malcolm
-  Read Story
+  Read Story -->
 
-  March 29th 2020
+    <!-- March 29th 2020
   King on Africa: Part II
   by Tim Hillenburg
-  Read Story
+  Read Story -->
 
-  March 21st 2020
+    <!-- March 21st 2020
   The Trip to Nowhere
   by Felicia Rourke
-  Read Story
-
+  Read Story -->
+    <!-- 
   March 19th 2020
   Rage of The Sea
   by Mohammed Abdul
-  Read Story
+  Read Story -->
 
-  March 16th 2020
+    <!-- March 16th 2020
   Running Free
   by Michelle
-  Read Story
+  Read Story -->
 
-  March 11th 2020
+    <!-- March 11th 2020
   Behind the Waves
   by Lamarr Wilson
-  Read Story
+  Read Story -->
 
-  March 9th 2020
+    <!-- March 9th 2020
   Calm Waters
   by Samantha Brooke
-  Read Story
+  Read Story -->
 
-  March 5th 2020
+    <!-- March 5th 2020
   The Milky Way
   by Benjamin Cruz
-  Read Story
+  Read Story -->
 
-  March 4th 2020
+    <!-- March 4th 2020
   Night at The Dark Forest
   by  Mohammed Abdul
-  Read Story
+  Read Story -->
 
-  March 1st 2020
+    <!-- March 1st 2020
   Somwarpet’s Beauty
   by Michelle
-  Read Story
+  Read Story -->
 
-  February 25th 2020
-  Land of Dreams
-  by William Malcolm
-  Read Story
-
-  Home
-  Stories
-  Features
-  Pricing
-
-  Get an invite
-
-  Copyright 2019. All Rights Reserved
-
-</body>
+    February 25th 2020 Land of Dreams by William Malcolm Read Story Home Stories
+    Features Pricing Get an invite Copyright 2019. All Rights Reserved
+  </body>
 </html>
